Add release tooling and fix R8 proguard rules